// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectListField component should display the field as empty 1`] = `
<div>
  <label
    className="control-label"
  >
    Form fields
  </label>
  <p>
    No field
  </p>
  <ForwardRef
    intent="secondary"
    onClick={[Function]}
    size="small"
  >
    <ButtonIconLabel
      icon="add"
    >
      Add 
      field
    </ButtonIconLabel>
  </ForwardRef>
</div>
`;

exports[`ObjectListField component should display the field with items 1`] = `
<div>
  <label
    className="control-label"
  >
    Form fields
  </label>
  <Row
    className="mb-3 form-row"
    key="0"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Col
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xs="5"
    >
      <InputField
        error="Header name contains invalid characters"
        name="key"
        onChange={[Function]}
        pattern="Header name contains invalid characters"
        placeholder="Key"
        required={true}
        type="text"
        value="bar"
      />
    </Col>
    <Col
      className="flex-grow"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <InputField
        error="Header name contains invalid characters"
        name="value"
        onChange={[Function]}
        placeholder="Value"
        required={true}
        type="text"
        value="foo"
      />
    </Col>
    <Col
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xs="auto"
    >
      <ForwardRef
        className="float-right"
        intent="destructive"
        onClick={[Function]}
        title="Remove field"
      >
        delete
      </ForwardRef>
    </Col>
  </Row>
  <ForwardRef
    intent="secondary"
    onClick={[Function]}
    size="small"
  >
    <ButtonIconLabel
      icon="add"
    >
      Add 
      field
    </ButtonIconLabel>
  </ForwardRef>
</div>
`;
